--- a/cadastro.html
+++ b/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Login</title>
-    <link rel="stylesheet" href="login.css"> 
+    <link rel="stylesheet" href="styles/login.css"> 
 </head>
 </head>
 <body>
@@ -18,6 +18,6 @@
     </div>
     
 
-    <script src="login.js"></script> 
+    <script src="scripts/login.js"></script> 
 </body>
 </html>
