--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
     <div class="container">
@@ -9,5 +9,5 @@
         <button id="entrar" href="login.html" class="purple-button">Click here to start system</button>
     </div>
 </body>
-<script src="script.js"></script>
-</html>+++
+<script src="scripts/script.js"></script>
+</html>
