--- a/sistema.html
+++ b/sistema.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caixa Aberto</title>
-    <link rel="stylesheet" href="sistema.css">
+    <link rel="stylesheet" href="styles/sistema.css">
 </head>
 <body>
     <div class="container">
@@ -45,6 +45,6 @@
         </div>
     </div>
 
-    <script src="sistema.js"></script> 
+    <script src="scripts/sistema.js"></script> 
 </body>
 </html>
